    o Added the 'covAtResiduals' argument that controls if covariances should be linked to residuals rather than nodes themselves if style="lisrel"
    o Added the 'bifactor' argument to create bifactor layouts. Only supported with layouts 'tree2', 'tree3', 'circle2' and 'circle3'.

Changes:
    o The argument curvePivot now defaults to FALSE, causing covariances by default to once again be drawn by circular curved edges.
    o A list of usefull qgraph arguments that can be used in semPaths is now listed in the semPaths help page.
    o 'mixCols' renamed to 'inheritColor'
    o The color argument can now be assined a list for assignng specific colors to all manifests, latents or intercepts
    o Some improvements to 'semCors'


Bug fixes:
    o Fixed a bug where using style='lisrel' did not correctly curve covariances between latents.
    o Fixed a bug where 'layoutSplit' resulted in a crash if there were only two connections in the structural model and "spring" layout was used.


Changes in Version 0.3.3
    o Lavaan model syntax is now supported as input
    o Numeric edge labels without using whatLabels argument are now correctly abbreviated
    o Several small fixes

Changes in Version 0.3.2
  o New features
    o Matrix model functionality:
      o Added 'semMatrixAlgebra' to easily perform matrix algebra on any semPlot input object.
      o Added 'modelMatrices' to obtain model matrices of LISREL, Mplus and RAM modeling frameworks of any input to semPlot.
      o Added 'exoVar' and 'exoCov' arguments that can be used to not display variances or covariances of truly exogenous variables (no incoming directed edges)
  o Added 'tree3' and 'circle3' layouts, based on Boker, S. M., McArdle, J. J., & Neale, M. (2002). An algorithm for the hierarchical organization of path diagrams and calculation of components of expected covariance. Structural Equation Modeling, 9(2), 174-194.

  o Major changes