@@ -2,12 +2,12 @@ Package: semPlot
 Type: Package
 Title: Path diagrams and visual analysis of various SEM packages' output
 Version: 1.0.0
-Date: 2014-02-10
+Date: 2014-02-11
 Author: Sacha Epskamp
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
 Suggests: MplusAutomation (>= 0.5-3)
-Imports:  qgraph (>= 1.2.3), lavaan (>= 0.5-11), sem (>= 3.1-0), plyr, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace, corpcor, methods
+Imports:  qgraph (>= 1.2.4), lavaan (>= 0.5-11), sem (>= 3.1-0), plyr, XML, igraph (>= 0.6-3), lisrelToR, rockchalk, colorspace, corpcor, methods
 ByteCompile: yes
 Description:  Path diagrams and visual analysis of various SEM packages' output
 URL: https://github.com/SachaEpskamp/semPlot
